change links to gh pages

--- a/index.html
+++ b/index.html
@@ -1,221 +1,233 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;700&display=swap" rel="stylesheet">
-        <link rel="icon" type="image/png" sizes="32x32" href="https://img.icons8.com/ios/50/000000/circled-j.png">
-        <script src="https://kit.fontawesome.com/09b23176e9.js" crossorigin="anonymous"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script src="main.js"></script>
-        <link rel="stylesheet" href="css/style.css">
-        <title>Portfolio - John Harold M. Beltran</title>
-    </head>
-    <body>
-        <header class="header">
-            <h4 class="header__subhead">Portfolio</h4>
-            <h1 class="header__title">Sample Works</h1>
-        </header>
 
-        <div class="category-btns">
-            <button class="btn all active-category">All</button>
-            <button class="btn frontend-mentor">Frontend Mentor</button>
-            <button class="btn codewell">Codewell</button>
-            <button class="btn clone">Clones</button>
-        </div>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://img.icons8.com/ios/50/000000/circled-j.png">
+    <script src="https://kit.fontawesome.com/09b23176e9.js" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="main.js"></script>
+    <link rel="stylesheet" href="css/style.css">
+    <title>Portfolio - John Harold M. Beltran</title>
+</head>
 
-        <div class="wrapper grid-container">
-            <div class="card clone-category virtual" id="https://harold-kun.github.io/virtual-folio-clone">
-                <div class="card__img-container">
-                    <img class="card__img" src="img/virtual-portfolio-clone-min.PNG" alt="">
-                </div>
+<body>
+    <header class="header">
+        <h4 class="header__subhead">Portfolio</h4>
+        <h1 class="header__title">Sample Works</h1>
+    </header>
 
-                <div class="card__caption">
-                    <h5 class="card__title">Virtual Portfolio Clone</h5>
-                </div>
+    <div class="category-btns">
+        <button class="btn all active-category">All</button>
+        <button class="btn frontend-mentor">Frontend Mentor</button>
+        <button class="btn codewell">Codewell</button>
+        <button class="btn clone">Clones</button>
+    </div>
+
+    <div class="wrapper grid-container">
+        <div class="card clone-category virtual" id="https://jhbeltran01.github.io/virtual-folio-clone">
+            <div class="card__img-container">
+                <img class="card__img" src="img/virtual-portfolio-clone-min.PNG" alt="">
             </div>
 
-            <div class="card clone-category mediumish" id="https://harold-kun.github.io/mediumish-clone/">
-                <div class="card__img-container">
-                    <img class="card__img" src="img/mediumish-clone-min.PNG" alt="">
-                </div>
-
-                <div class="card__caption">
-                    <h5 class="card__title">Mediumish Clone</h5>
-                </div>
-            </div>
-
-            <div class="card codewell-category comment" id="https://harold-kun.github.io/comment-app/">
-                <div class="card__img-container">
-                    <img class="card__img" src="img/comment-app-min.PNG" alt="">
-                </div>
-
-                <div class="card__caption">
-                    <h5 class="card__title">Comment App</h5>
-                </div>
-            </div>
-
-            <div class="card frontend-mentor-category 3-column-preview" id="https://harold-kun.github.io/3-column-preview-card-component-main/">
-                <div class="card__img-container">
-                    <img class="card__img" src="img/3-column-preview-min.PNG" alt="">
-                </div>
-
-                <div class="card__caption">
-                    <h5 class="card__title">3 Column Preview</h5>
-                </div>
-            </div>
-
-            <div class="card frontend-mentor-category calculator-app-main" id="https://harold-kun.github.io/calculator-app-main/">
-                <div class="card__img-container">
-                    <img class="card__img" src="img/calculator-app-min.PNG" alt="">
-                </div>
-
-                <div class="card__caption">
-                    <h5 class="card__title">Calculator App</h5>
-                </div>
-            </div>
-
-            <div class="card frontend-mentor-category chat-app" id="https://harold-kun.github.io/chat-app-css-illustration-master/">
-                <div class="card__img-container">
-                    <img class="card__img" src="img/chat-app-min.PNG" alt="">
-                </div>
-
-                <div class="card__caption">
-                    <h5 class="card__title">Chat App</h5>
-                </div>
-            </div>
-
-            <div class="card codewell-category chirp" id="https://harold-kun.github.io/Chirp_Starter_Files_4af606ca18/">
-                <div class="card__img-container">
-                    <img class="card__img" src="img/chirp-starter-min.PNG" alt="">
-                </div>
-
-                <div class="card__caption">
-                    <h5 class="card__title">Chirp</h5>
-                </div>
-            </div>
-
-            <div class="card frontend-mentor-category clipboard" id="https://harold-kun.github.io/clipboard-landing-page-master/">
-                <div class="card__img-container">
-                    <img class="card__img" src="img/clipboard-min.PNG" alt="">
-                </div>
-
-                <div class="card__caption">
-                    <h5 class="card__title">Clipboard</h5>
-                </div>
-            </div>
-
-            <div class="card frontend-mentor-category crowfunding" id="https://harold-kun.github.io/crowdfunding-product-page-main/">
-                <div class="card__img-container">
-                    <img class="card__img" src="img/crow-funding-min.PNG" alt="">
-                </div>
-
-                <div class="card__caption">
-                    <h5 class="card__title">Crow Funding</h5>
-                </div>
-            </div>
-
-            <div class="card codewell-category fiber" id="https://harold-kun.github.io/Fiber_Starter_Files_2f9623e710/">
-                <div class="card__img-container">
-                    <img class="card__img" src="img/fiber-starter-min.PNG" alt="">
-                </div>
-
-                <div class="card__caption">
-                    <h5 class="card__title">Fiber</h5>
-                </div>
-            </div>
-
-            <div class="card frontend-mentor-category huddle" id="https://harold-kun.github.io/huddle-landing-page-with-alternating-feature-blocks-master/">
-                <div class="card__img-container">
-                    <img class="card__img" src="img/huddle-page-min.PNG" alt="">
-                </div>
-
-                <div class="card__caption">
-                    <h5 class="card__title">Huddle</h5>
-                </div>
-            </div>
-
-            <div class="card codewell-category indie" id="https://harold-kun.github.io/Indie_Brew_Starter_Files_4203147ba6/">
-                <div class="card__img-container">
-                    <img class="card__img" src="img/indie-brew-min.PNG" alt="">
-                </div>
-
-                <div class="card__caption">
-                    <h5 class="card__title">Indie Brew</h5>
-                </div>
-            </div>
-
-            <div class="card frontend-mentor-category sunnyside" id="https://harold-kun.github.io/sunnyside-agency-landing-page-main/">
-                <div class="card__img-container">
-                    <img class="card__img" src="img/sunny-side-min.PNG" alt="">
-                </div>
-
-                <div class="card__caption">
-                    <h5 class="card__title">Sunny Side</h5>
-                </div>
-            </div>
-
-            <div class="card frontend-mentor-category testimonial" id="https://harold-kun.github.io/testimonials-grid-section-main/">
-                <div class="card__img-container">
-                    <img class="card__img" src="img/testimonials-min.PNG" alt="">
-                </div>
-
-                <div class="card__caption">
-                    <h5 class="card__title">Testimonials</h5>
-                </div>
-            </div>
-
-            <div class="card frontend-mentor-category todo-app" id="https://harold-kun.github.io/todo-app-main/">
-                <div class="card__img-container">
-                    <img class="card__img" src="img/todo-app-min.PNG" alt="">
-                </div>
-
-                <div class="card__caption">
-                    <h5 class="card__title">Todo App</h5>
-                </div>
-            </div>
-
-            <div class="card clone-category portfolio" id="https://harold-kun.github.io/portfolio-design-one/">
-                <div class="card__img-container">
-                    <img class="card__img" src="img/portfolio-design-min.PNG" alt="">
-                </div>
-
-                <div class="card__caption">
-                    <h5 class="card__title">Portfolio Design</h5>
-                </div>
+            <div class="card__caption">
+                <h5 class="card__title">Virtual Portfolio Clone</h5>
             </div>
         </div>
 
-        <div class="modal">
-            <div class="modal__btns">
-                <button class="btn-close">Close</button>
-
-                <button class="btn-device desktop-device active-category">
-                    <i class="fas fa-desktop icon"></i>
-                    Desktop
-                </button>
-
-                <button class="btn-device tablet-device">
-                    <i class="fa fa-tablet icon" aria-hidden="true"></i>
-                    Tablet
-                </button>
-
-                <button class="btn-device mobile-device">
-                    <i class="fas fa-mobile-alt icon"></i>
-                    Mobile
-                </button>
-
-                <button class="btn-code index.txt push-right">HTML</button>
-                <button class="btn-code style.txt">SASS</button>
-                <button class="btn-code main.js">JAVASCRIPT</button>
+        <div class="card clone-category mediumish" id="https://jhbeltran01.github.io/mediumish-clone/">
+            <div class="card__img-container">
+                <img class="card__img" src="img/mediumish-clone-min.PNG" alt="">
             </div>
 
-            <iframe class="iframe" src="" frameborder="0"></iframe>
+            <div class="card__caption">
+                <h5 class="card__title">Mediumish Clone</h5>
+            </div>
         </div>
-        
-        <a href="https://icons8.com/icon/66739/circled-j">Circled J icon by Icons8</a>
-    </body>
+
+        <div class="card codewell-category comment" id="https://jhbeltran01.github.io/comment-app/">
+            <div class="card__img-container">
+                <img class="card__img" src="img/comment-app-min.PNG" alt="">
+            </div>
+
+            <div class="card__caption">
+                <h5 class="card__title">Comment App</h5>
+            </div>
+        </div>
+
+        <div class="card frontend-mentor-category 3-column-preview"
+            id="https://jhbeltran01.github.io/3-column-preview-card-component-main/">
+            <div class="card__img-container">
+                <img class="card__img" src="img/3-column-preview-min.PNG" alt="">
+            </div>
+
+            <div class="card__caption">
+                <h5 class="card__title">3 Column Preview</h5>
+            </div>
+        </div>
+
+        <div class="card frontend-mentor-category calculator-app-main"
+            id="https://jhbeltran01.github.io/calculator-app-main/">
+            <div class="card__img-container">
+                <img class="card__img" src="img/calculator-app-min.PNG" alt="">
+            </div>
+
+            <div class="card__caption">
+                <h5 class="card__title">Calculator App</h5>
+            </div>
+        </div>
+
+        <div class="card frontend-mentor-category chat-app"
+            id="https://jhbeltran01.github.io/chat-app-css-illustration-master/">
+            <div class="card__img-container">
+                <img class="card__img" src="img/chat-app-min.PNG" alt="">
+            </div>
+
+            <div class="card__caption">
+                <h5 class="card__title">Chat App</h5>
+            </div>
+        </div>
+
+        <div class="card codewell-category chirp" id="https://jhbeltran01.github.io/Chirp_Starter_Files_4af606ca18/">
+            <div class="card__img-container">
+                <img class="card__img" src="img/chirp-starter-min.PNG" alt="">
+            </div>
+
+            <div class="card__caption">
+                <h5 class="card__title">Chirp</h5>
+            </div>
+        </div>
+
+        <div class="card frontend-mentor-category clipboard"
+            id="https://jhbeltran01.github.io/clipboard-landing-page-master/">
+            <div class="card__img-container">
+                <img class="card__img" src="img/clipboard-min.PNG" alt="">
+            </div>
+
+            <div class="card__caption">
+                <h5 class="card__title">Clipboard</h5>
+            </div>
+        </div>
+
+        <div class="card frontend-mentor-category crowfunding"
+            id="https://jhbeltran01.github.io/crowdfunding-product-page-main/">
+            <div class="card__img-container">
+                <img class="card__img" src="img/crow-funding-min.PNG" alt="">
+            </div>
+
+            <div class="card__caption">
+                <h5 class="card__title">Crow Funding</h5>
+            </div>
+        </div>
+
+        <div class="card codewell-category fiber" id="https://jhbeltran01.github.io/Fiber_Starter_Files_2f9623e710/">
+            <div class="card__img-container">
+                <img class="card__img" src="img/fiber-starter-min.PNG" alt="">
+            </div>
+
+            <div class="card__caption">
+                <h5 class="card__title">Fiber</h5>
+            </div>
+        </div>
+
+        <div class="card frontend-mentor-category huddle"
+            id="https://jhbeltran01.github.io/huddle-landing-page-with-alternating-feature-blocks-master/">
+            <div class="card__img-container">
+                <img class="card__img" src="img/huddle-page-min.PNG" alt="">
+            </div>
+
+            <div class="card__caption">
+                <h5 class="card__title">Huddle</h5>
+            </div>
+        </div>
+
+        <div class="card codewell-category indie"
+            id="https://jhbeltran01.github.io/Indie_Brew_Starter_Files_4203147ba6/">
+            <div class="card__img-container">
+                <img class="card__img" src="img/indie-brew-min.PNG" alt="">
+            </div>
+
+            <div class="card__caption">
+                <h5 class="card__title">Indie Brew</h5>
+            </div>
+        </div>
+
+        <div class="card frontend-mentor-category sunnyside"
+            id="https://jhbeltran01.github.io/sunnyside-agency-landing-page-main/">
+            <div class="card__img-container">
+                <img class="card__img" src="img/sunny-side-min.PNG" alt="">
+            </div>
+
+            <div class="card__caption">
+                <h5 class="card__title">Sunny Side</h5>
+            </div>
+        </div>
+
+        <div class="card frontend-mentor-category testimonial"
+            id="https://jhbeltran01.github.io/testimonials-grid-section-main/">
+            <div class="card__img-container">
+                <img class="card__img" src="img/testimonials-min.PNG" alt="">
+            </div>
+
+            <div class="card__caption">
+                <h5 class="card__title">Testimonials</h5>
+            </div>
+        </div>
+
+        <div class="card frontend-mentor-category todo-app" id="https://jhbeltran01.github.io/todo-app-main/">
+            <div class="card__img-container">
+                <img class="card__img" src="img/todo-app-min.PNG" alt="">
+            </div>
+
+            <div class="card__caption">
+                <h5 class="card__title">Todo App</h5>
+            </div>
+        </div>
+
+        <div class="card clone-category portfolio" id="https://jhbeltran01.github.io/portfolio-design-one/">
+            <div class="card__img-container">
+                <img class="card__img" src="img/portfolio-design-min.PNG" alt="">
+            </div>
+
+            <div class="card__caption">
+                <h5 class="card__title">Portfolio Design</h5>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal">
+        <div class="modal__btns">
+            <button class="btn-close">Close</button>
+
+            <button class="btn-device desktop-device active-category">
+                <i class="fas fa-desktop icon"></i>
+                Desktop
+            </button>
+
+            <button class="btn-device tablet-device">
+                <i class="fa fa-tablet icon" aria-hidden="true"></i>
+                Tablet
+            </button>
+
+            <button class="btn-device mobile-device">
+                <i class="fas fa-mobile-alt icon"></i>
+                Mobile
+            </button>
+
+            <button class="btn-code index.txt push-right">HTML</button>
+            <button class="btn-code style.txt">SASS</button>
+            <button class="btn-code main.js">JAVASCRIPT</button>
+        </div>
+
+        <iframe class="iframe" src="" frameborder="0"></iframe>
+    </div>
+
+    <a href="https://icons8.com/icon/66739/circled-j">Circled J icon by Icons8</a>
+</body>
+
 </html>
