add newlife template

--- a/index.html
+++ b/index.html
@@ -198,6 +198,16 @@
           <h5 class="card__title">Estore</h5>
         </div>
       </div>
+
+      <div class="card clone-category portfolio" id="https://jhbeltran01.github.io/newlife-template/">
+        <div class="card__img-container">
+          <img class="card__img" src="img/newlife.png" alt="" />
+        </div>
+
+        <div class="card__caption">
+          <h5 class="card__title">Newlife</h5>
+        </div>
+      </div>
     </div>
 
     <div class="modal">
